--- a/src/app/pages/about-objectives/about-objectives.component.html
+++ b/src/app/pages/about-objectives/about-objectives.component.html
@@ -1,1 +1,121 @@
-<p>about-objectives works!</p>
+<div class="container-fluid animated fadeIn"> 
+    <h1 class="text-center">{{'Objetivos' | uppercase}}</h1>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <br>
+                <div class="text-center">
+                    <div class="row ">
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Optimización' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/2714/2714396.svg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Hacer la aplicación web lo más rapido y eficiente posible con la arquitectura de modulos y aplicando lazyload a las rutas.</h6>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Desarrollar la aplicación web en Angular Framework.</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Migración de tecnologías' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/1170/1170136.svg" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Rediseño de portal' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/2615/2615149.svg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Aplicar estilos de diseño en base a un diseño ya predefinido.</h6>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Lograr que existan roles de usuario con tokens JWT y que no puedan navegar a ciertos apartados.</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Seguridad de roles' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/1161/1161388.svg" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Componentes reutilizables' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/1256/1256638.svg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>No volver a escribir el mismo código, en la aplicación se reutilizan varios componentes como la barra de navegación.</h6>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Manejar adecuadamente los roles logrando que un usuario normal pueda ser administrador para que pueda entrar a ciertos apartados.</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Manejo de roles' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/1694/1694712.svg" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Funcionalidad óptima para el usuario' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/2103/2103628.svg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Desarrollo del portal pensando en que nosotros somos los usuarios.</h6>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Desarrollarlo en base a K.I.S.S (Keep It Simple Stupid)</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Diseño intuitivo' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/2714/2714403.svg" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5 class="text-center">{{'Diseño moderno' | uppercase }}</h5>
+                            <img src="https://image.flaticon.com/icons/svg/1141/1141899.svg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Diseño adecuado para la época.</h6>
+                        </div>
+                    </div>
+                    
+                    
+                   
+
+                       
+                
+                  
+                </div>
+              
+                
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
+<br>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <button type="button"  class="btn btn-dark text-white btn-lg btn-block animated fadeInUp" (click)="back2begin()">Regresar</button>
+        </div>
+        <div class="col-md-4" > <br> </div>
+    </div>
+</div>
+<br>
