--- a/src/app/pages/about-technologies/about-technologies.component.html
+++ b/src/app/pages/about-technologies/about-technologies.component.html
@@ -1,1 +1,96 @@
-<p>about-technologies works!</p>
+<div class="container-fluid animated fadeIn"> 
+    <h1 class="text-center">{{'Tecnologías' | uppercase}}</h1>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <br>
+                <div class="text-center">
+                    <div class="row ">
+                        <div class="col-md-6">
+                            <img src="https://firebase.google.com/images/social.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Se utilizó para la autenticación, base de datos en tiempo real, autorización y deploy.</h6>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Se utilizó para la creación del diseño combinado con SASS.</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="https://anthoncode.com/wp-content/uploads/2019/01/bootstrap-logo-png.png" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="https://cms-assets.tutsplus.com/uploads/users/1251/posts/28384/preview_image/chartjs-tutsplus.jpg" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Se utilizó para las gráficas dinamicas.</h6>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Se utlizó el gestor de paquetes de node.js para poder instalar las librerías.</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="https://nodejs.org/static/images/blog/weekly-update/d7c62f3e-d94c-11e5-8ff8-f32c74b13cc3.png" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="https://anthoncode.com/wp-content/uploads/2019/01/angular-logo-png.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Se utilizó Angular 9 como el framework principal para usar sus guards, componentes, modulos Y servicios.</h6>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Se utilizó para darle animación a las distintas páginas del proyecto.</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="https://i.ytimg.com/vi/QYQ0I1mvFDE/maxresdefault.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="https://cdn.freebiesupply.com/logos/thumbs/2x/git-logo.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <h6>Se utilizó para el versionamiento del proyecto.</h6>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6>Se utilizó para guardar el repositorio del proyecto.</h6>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="https://s3.amazonaws.com/cdn.wp.m4ecnet/wp-content/uploads/2018/06/05041237/GitHub-logo-2-imagen-1024x576.jpg" alt="">
+                        </div>
+                    </div>
+                                
+  
+                </div>
+              
+                
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+</div>
+<br>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <button type="button"  class="btn btn-dark text-white btn-lg btn-block animated fadeInUp" (click)="back2begin()">Regresar</button>
+        </div>
+        <div class="col-md-4" > <br> </div>
+    </div>
+</div>
+<br>
